--- a/src/app/pages/recipe/recipe.component.scss
+++ b/src/app/pages/recipe/recipe.component.scss
@@ -75,7 +75,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 2.5rem;
+  gap: 3rem;
 }
 
 .ingredients > div > span,
@@ -99,6 +99,14 @@
 @media screen and (max-width: 768px) {
   .container {
     gap: 2rem;
+    span {
+      font-size: 1.5rem;
+    }
+    .description,
+    .ingredients > div > span,
+    .info > div > span {
+      font-size: 1.3rem;
+    }
   }
 }
 @media screen and (max-width: 450px) {
